--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <title>Portfolio</title>
   </head>
   <body>
+    <div id="loader" class="center"></div>
     <nav class="navbar navbar-expand-lg navbar-light">
       <a class="navbar-brand" href="#"
         ><svg
@@ -589,6 +590,7 @@
         </div>
       </div>
     </section>
+    <script src="./loader.js"></script>
     <script src="./index.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
