nav, loading speed fixed

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="./loader.js"></script>
+
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Spartan:wght@600&display=swap"
@@ -45,7 +47,7 @@
 
     <title>Portfolio</title>
   </head>
-  <body>
+  <body id="preload" class="preloader-stuff">
     <div id="loader" class="center"></div>
     <nav class="navbar navbar-expand-lg navbar-light">
       <a class="navbar-brand" href="#"
@@ -590,7 +592,6 @@
         </div>
       </div>
     </section>
-    <script src="./loader.js"></script>
     <script src="./index.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
