contact height and title adjusted

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div class="row">
           <div class="col-lg-6 col-md-6 col-sm-12">
             <p class="title-effect">
-              <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, Im Dheeraj Dayakaran.", "I Love to Design.", "I Love to Develop." ]'>
+              <a href="" class="typewrite" data-period="2000" data-type='[ "Hi, I am Dheeraj Dayakaran.", "I Love to Design.", "I Love to Develop." ]'>
                 <span class="wrap"></span>
               </a>
             </p>
@@ -403,7 +403,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 col-md-12 col-sm-12" data-aos="fade-up">
-            <p class="heading-titles"><strong>C</strong>ontact</p>
+            <p class="heading-titles"><strong>C</strong>ontact Me</p>
             <br />
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12">
