--- a/index.html
+++ b/index.html
@@ -43,11 +43,26 @@
             stroke="white" stroke-width="2" />
         </svg>
       </a>
-      <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
+      <span class="custom-toggler" onclick="openNav()">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </span>
+
+      <div id="myNav" class="overlay">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <div class="overlay-content">
+          <a class="main-content-hidden" href="/">Home</a>
+          <a class="main-content-hidden" href="#about">About</a>
+          <a class="main-content-hidden" href="#skill">Skills</a>
+          <a class="main-content-hidden" href="#project">Projects</a>
+          <a class="main-content-hidden" href="#contact">Contact</a>
+        </div>
+      </div>
+
+
+      <div class="collapse navbar-collapse custom-off" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
             <a class="nav-link" href="#home">Home</a>
@@ -513,6 +528,7 @@
       </div>
     </section>
     <script src="./index.js"></script>
+    <script src="nav.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init();
