--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               </a>
             </p>
           </div>
-          <div class="col-lg-6 col-md-6 col-sm-6 logo-mark">
+          <div class="col-lg-6 col-md-6 col-sm-6 d-flex justify-content-center logo-mark">
             <p class="logo-effect">DD</p>
           </div>
         </div>
