new info updates

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
           <a class="main-content-hidden" href="#about">About</a>
           <a class="main-content-hidden" href="#skill">Skills</a>
           <a class="main-content-hidden" href="#project">Projects</a>
+          <a class="main-content-hidden" target="_blank" href="https://drive.google.com/file/d/1uqjPK_WQ-t3JImDXHljeXBtFq_NWvySL/view?usp=sharing">Resume</a>
           <a class="main-content-hidden" href="#contact">Contact</a>
         </div>
       </div>
@@ -75,6 +76,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#project">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" target="_blank" href="https://drive.google.com/file/d/1uqjPK_WQ-t3JImDXHljeXBtFq_NWvySL/view?usp=sharing">Resume</a>
           </li>
           <li class="nav-item">
             <a class="nav-link final-item" href="#contact">Contact</a>
@@ -143,9 +147,8 @@
             <p class="heading-titles" data-aos="fade-up"><strong>A</strong>bout Me</p>
             <br />
             <p class="inner-material" data-aos="fade-down">
-              Hello, Myself Dheeraj Dayakaran. Currently, I am a Final Year EXTC
-              Student at SIES Graduate School Of Technology. Currently into Web
-              Development and AI. I enjoy building interactive and beautiful web
+              Hello, Myself Dheeraj Dayakaran. Currently, pursuing MTECH in CSE at Amrita Vishwa Vidyapeetham. I am into Web
+              Development from last 3years. I enjoy building interactive and beautiful web
               pages from <strong>SCRATCH.</strong>
             <p class="inner-material" data-aos="fade-down">
               My speciality is front-end web design and development, pushing
@@ -441,7 +444,6 @@
               <label for="message" class="form-headings" data-aos="zoom-in-up">Message</label><input type="text"
                 name="message" data-aos="zoom-in-up" /><br /><br />
               <button class="submission" type="submit" data-aos="zoom-in-down"><span>Submit</span></button>
-
             </form>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12 my-auto">
