--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <p class="heading-titles" data-aos="fade-up"><strong>A</strong>bout Me</p>
             <br />
             <p class="inner-material" data-aos="fade-down">
-              Hello, Myself Dheeraj Dayakaran. Currently, pursuing MTECH in CSE at Amrita Vishwa Vidyapeetham. I am into Web
+              Hello, Myself Dheeraj Dayakaran. I am into Web
               Development from last 3years. I enjoy building interactive and beautiful web
               pages from <strong>SCRATCH.</strong>
             <p class="inner-material" data-aos="fade-down">
