--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <a class="main-content-hidden" href="#about">About</a>
           <a class="main-content-hidden" href="#skill">Skills</a>
           <a class="main-content-hidden" href="#project">Projects</a>
-          <a class="main-content-hidden" target="_blank" href="https://drive.google.com/file/d/1uqjPK_WQ-t3JImDXHljeXBtFq_NWvySL/view?usp=sharing">Resume</a>
+          <!-- <a class="main-content-hidden" target="_blank" href="https://drive.google.com/file/d/1uqjPK_WQ-t3JImDXHljeXBtFq_NWvySL/view?usp=sharing">Resume</a> -->
           <a class="main-content-hidden" href="#contact">Contact</a>
         </div>
       </div>
@@ -77,9 +77,9 @@
           <li class="nav-item">
             <a class="nav-link" href="#project">Projects</a>
           </li>
-          <li class="nav-item">
+<!--           <li class="nav-item">
             <a class="nav-link" target="_blank" href="https://drive.google.com/file/d/1uqjPK_WQ-t3JImDXHljeXBtFq_NWvySL/view?usp=sharing">Resume</a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link final-item" href="#contact">Contact</a>
           </li>
